# 30s

./: .gitignore  CHANGELOG.md  Justfile  README.md  devenv.nix
.changes/: v0.1.0.md  v0.2.0.md  (+4 more)
crates/api/: Cargo.toml
crates/api/.sqlx/: query-06a58c2203f714a5f5a1a7199eb9472888a117be1b2c7ab68cb2ddc4476a5977.json  query-0932ec24b16c77bac138c2aa77a5d6ef2c6412c7d0096357569b1e49c24e80af.json  query-175a98d5311e65496378968c4a450466d53a895a160accb1784e42a1072aa5de.json  query-176dcd70ff91954dc6037cb239ebb42fe9386895d52b1c554184a827623659ac.json  query-194141944fff3f5e4a705539698f945c0879d41e188f3eb279ebf209b81a086d.json  query-1fa14121dc6585afc731b69f4e4fc8097d85bd30afaeb7d97888e3d31e0028e5.json  query-23500ec671717df65fdaa448c8587745e24c36b0be194d010b3f22e625dd650f.json  query-240eb4d3172d00b13a5183517551e9bb5a938f7b6baa940eab6dd3ca4f08a60f.json  query-36164ac67a154a0d81da29fa24dbf8b3b3145628550c7ad05a1092823ca9cef7.json  query-3b814132b46fb0001906b0b4eb3989787c1dcc8ff0231789778d20b72c6322f6.json  query-3d134e243b3ca82b998fa02fc6666d830cc3018d01bcbe9530e6b667c696f7b7.json  query-3ed47301a830b2a83410fb192740bbb16e52f7450009ba60693f2daded5cabb5.json  query-418356e7091e0642ad69cbaa601301f839aaa526ed21952e2375d7577d123dce.json  query-445b9558d4fadb8816ac45f2e3a3257a2ce35138b6e9048259fd0b346b50989e.json  query-4586ccf7619e6e2e31be759ff7fb224a00cb9bcfff63ba7d8b11bebeaf7c3dca.json  query-4807972b44896385074c5e4bbc401ef324b969fd2ac9bdf8908e3f955c9a7676.json  query-4e3eb8fe4b7438a5427460e8079ce190980523e06cf55f74b94f9d7064a00419.json  query-5424a07812c8b0ea383e1e7113586271e526c12602d5c6fc8f18e027d7c4bd3f.json  query-5a7eb3ca945d8f008a64260ede2b5a50d81c42b784b04c6a44fa82200e4e52e8.json  query-5acc29c6c3f1fb35229d6c6472772b4cbb113d97ebfbd279285b20c553e8620f.json  query-5f5a7bcc5114903edf42cc1998b0a67212cd936ac31f1f9cb625df024d73b5ac.json  query-5f8bb77de61072c28c5ff2d81ab210323881fd4a4ab927418fa1c50791989cc5.json  query-6559552f6c8657eaac68148e92179b9a7f145fdc8d2f680df7d2304a92517fa5.json  query-664fc09d3b95b102ce89b67721370741afd79a57176cd20480fbe57923f835f7.json  query-6da70244eb8426a73ee6ec2573f0441d0eff2a767c995debb75651fa2e49de24.json  query-71916fd535c0311ecce9d6b3ae9423be78a5ef0e08612b853e7da3bfb382e104.json  query-78e28f51ebe24c64412c9b2ff2d2182be8ae558f44815b200e9bf08ee4a7dc0e.json  query-7baba5b99b01cbe1a516cd514a6721b70b349176fb8ba97960e66bc5060ccd48.json  query-7e6ced9a3c4f6ca478352b7ec2fedf444217a3fbc292cd62ecb662788ed6c50f.json  query-825e57e51ff15fbcceea749960466617fab163dabd9657d324fec0f2c02bb8e8.json  query-826b7b7059b92bd6b3a45bf8ccf38649fb5023ecdc02aeba52bb84bbd1fa170c.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8b2b6d87411fc0b32dd21f89543ac4209ffe31b3f13b68dbd21331d442d7aabc.json  query-8da2bd8ffb9d1fb59b599fa1729a2cb93398f26e5e5bff03a85cf5b35c844dd6.json  query-90fdfbb17725576ffeb4419982e5cbbcc45fc6f47412d229a16d4f2d162c44d0.json  query-94729e7e570da9a48ae281cb0d8f65c7484215888d9e14326911e7e0b9817c74.json  query-99e239336b65dbcca1175c6d4a95e6569f5d200f1e8151f89b2fa54d0cabf7e0.json  query-9e09a28f0dbba82919023c85827d0f71d74ca7ce2a7546084a82b116b8d3640b.json  query-9e563f5f8d976411ac2ae267982a04752f64af839ef18e5a3202d8effae24a53.json  query-a014775607b82859379aff84a80cc417a62dc5e2862c127f1e4c4e0b5e8f60de.json  (+24 more)
crates/api/migrations/: 20260121111706_add_users.up.sql  20260121201444_add_devices.up.sql  20260128161230_add_workspaces.down.sql  20260128161230_add_workspaces.up.sql  20260128161231_add_stripe.down.sql  20260128161231_add_stripe.up.sql  20260129120000_add_workspace_policies.up.sql  20260129180000_add_workspace_activity.down.sql  20260129180000_add_workspace_activity.up.sql  20260201083954_add_webhooks.up.sql
crates/api/src/: activity.rs  config.rs  dns.rs  email.rs  error.rs  handlers.rs  main.rs  models.rs  repos.rs  services.rs  state.rs  stores.rs  test_utils.rs  unkey.rs
crates/api/src/handlers/: activity.rs  auth.rs  billing.rs  devices.rs  drops.rs  health.rs  webhooks.rs  workspace.rs
crates/api/src/middleware/: auth.rs
crates/api/src/repos/: activity.rs  devices.rs  membership.rs  status.rs  users.rs  webhooks.rs  workspaces.rs
crates/api/src/services/: auth.rs  email.rs  unkey.rs  webhook.rs
crates/api/src/stores/: drops.rs  inbox.rs  rate_limit.rs  verification.rs
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  commands.rs  config.rs  contacts.rs  credentials.rs  crypto.rs  known_keys.rs  main.rs  test.rs  ui.rs  version.rs
crates/cli/src/commands/: activity.rs  alias.rs  billing.rs  delete.rs  destroy.rs  devices.rs  groups.rs  inbox.rs  init.rs  logout.rs  open.rs  rotate.rs  send.rs  webhooks.rs  whoami.rs  workspace.rs
crates/cli/src/test/: context.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs
(+38 files in other folders)
