[package]
name = "api"
version = "0.2.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
envy = "0.4.2"
garde = { version = "0.22.1", features = ["full"] }
hex = "0.4.3"
http = "1.4.0"
lettre = "0.11.19"
rand = "0.9.2"
redis = { version = "1.0.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp"] }
shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["request-id", "util", "trace", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
resend-rs = "0.20.0"
sentry = "0.46.1"

[dev-dependencies]
http-body-util = "0.1.3"
