[package]
name = "cli"
version = "0.3.0-rc1"
edition.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
crypto_box = "0.9.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
envy = "0.4.2"
futures = "0.3.31"
humantime = "2.3.0"
indicatif = "0.18.3"
keyring-lib = "1.0.2"
owo-colors = "4.2.3"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "0.9.8"
zeroize = "1.8.2"
open = "5.3.2"
shared = { path = "../shared" }
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
semver = "1.0.27"

[dev-dependencies]
wiremock = "0.6.5"
